# Recommender-System-SocialCircle

./: .gitignore  README.md  merge_notebooks.py  project_full.html  project_full.ipynb  pyproject.toml
EDA/: eda.ipynb
Evaluation/: evaluation.ipynb
Graph_Features/: features.ipynb
Modeling/: model.ipynb
