[project]
name = "recommender-system-socialcircle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
